--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "browserslist": "last 2 versions",
   "dependencies": {
+    "femtotween": "^1.1.1",
     "foundation-sites": "^6.6.2",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.0",
