--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "foundation-sites": "^6.6.2",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.0",
+    "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
     "gulp-sass": "^4.0.2",
+    "gulp-sourcemaps": "^2.6.5",
     "jquery": "^3.4.1",
     "motion-ui": "^2.0.3",
     "pump": "^3.0.0",
