--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ lxml = "^4.5.0"
 
 [tool.poetry.dev-dependencies]
 pylint = "^2.4.4"
+rstcheck = "^3.3.1"
 
 [build-system]
 requires = ["poetry>=0.12"]
