--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "gulp-autoprefixer": "^7.0.0",
     "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
-    "gulp-sass": "^4.0.2",
+    "gulp-dart-sass": "^1.0.2",
     "gulp-sourcemaps": "^2.6.5",
     "jquery": "^3.5.0",
     "motion-ui": "^2.0.3",
